Closed Bug 17892 Opened 25 years ago Closed 25 years ago

Scrollbar flicker

Categories

(Core :: Layout: Form Controls, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: kmcclusk)

References

()

Details

(Whiteboard: Have fix in my tree)

TO REPEAT: 1. Select menu-item "Debug" - "Viewer Demos" - "#14 XML Sorting" 2. Click the "Toggle Style" button 3. Move mouse pointer in and out of the "Toggle Style" button Win32: Notice how the "greyed out" scrollbars of the textboxes briefly displayes a "thumb". Solaris: Notice how all scrollbars flicker. Observe that this does only happen over the "Toggle Style" button and not on the other buttons ("Author","Title","ISBN #"). BUILDS AND PLATFORMS: Bug occurs in build 1999110212 on Sun Solaris 2.6/sparc Bug occurs in build 1999110208 on Windows NT 4.0 sp5
Assignee: karnaze → kmcclusk
Reassigning to Kevin.
Status: NEW → ASSIGNED
Whiteboard: Have fix in my tree
Target Milestone: M12
There are two problems; the parenting of style context for the button label is incorrect and the outline button style was being included in the reflow decision even though it is not used.
Severity: minor → major
Increasing severity to major since it is reflowing the entire document each time the button is entered and exited. This is a general problem where clicking on a button which causes it's frame to be destroyed puts the button into a state where it keeps reflowing on every enter and exit.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Fixed in 11/12/99 10:00 am build.
Status: RESOLVED → VERIFIED
Target Milestone: M12 → M1
verified fixed on 11/16 builds
You need to log in before you can comment on or make changes to this bug.