Fixed problem where buttons where causing reflows when entering and exiting. Removed outline border style and fixed style context parentage of buttons. bug 17892; r=buster@netscape.com